[gd_scene load_steps=2 format=3 uid="uid://pjsk5llxms0j"]

[ext_resource type="Script" path="res://editor/settings/SkyEditorFloatSetting.gd" id="1_i5kop"]

[node name="FloatSetting" type="MarginContainer"]
auto_translate_mode = 1
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_i5kop")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2
theme_override_constants/separation = 10

[node name="SettingLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
text = "Setting Name"

[node name="SettingValue" type="SpinBox" parent="HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
min_value = -100.0
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 2
custom_arrow_step = 0.01

[connection signal="value_changed" from="HBoxContainer/SettingValue" to="." method="_on_setting_value_changed"]
